--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,17 +1,16 @@
 <!-- views/dashboard.ejs -->
 <%- include('header', { title: 'Shrynk Dashboard', user: user }) %>
-<div class="container mx-auto p-8">
-    <h1 class="text-4xl font-bold mb-4">Shrynk Dashboard</h1>
+<div class="container mx-auto p-4 md:p-8">
+    <h1 class="text-3xl md:text-4xl font-bold mb-4">Shrynk Dashboard</h1>
     <form action="/links/create" method="POST" class="mb-4">
-        <div class="flex items-center">
-            <input type="text" name="originalUrl" placeholder="URL" class="border-lightBlue border rounded-md p-3 w-96 bg-gray-800 text-white mr-4" required>
-            <input type="text" name="customShortUrl" placeholder="Shrynk Code" class="border-lightBlue border rounded-md p-3 w-32 bg-gray-800 text-white" required>
+        <div class="flex flex-col md:flex-row items-center">
+            <input type="text" name="originalUrl" placeholder="URL" class="border-lightBlue border rounded-md p-3 w-full md:w-96 bg-gray-800 text-white mr-4 mb-2 md:mb-0" required>
+            <input type="text" name="customShortUrl" placeholder="Shrynk Code" class="border-lightBlue border rounded-md p-3 w-full md:w-32 bg-gray-800 text-white" required>
         </div>
         <button type="submit" class="mt-4 bg-purple-600 text-white p-3 rounded flex items-center justify-center">
             <i class="material-icons text-white mr-2">link</i>Shrynk it!
         </button>
     </form>
-    <br>
     <h2 class="text-3xl font-bold mb-5">Your Links</h2>
     <ul id="linkList">
         <% links.forEach(link => { %>
