--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,9 +15,9 @@
 </head>
 <body class="bg-gray-900 text-white">
     <header class="p-4">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <img src="/shrynk_logo_text.png" alt="Shrynk Logo" class="w-16 h-12 cursor-pointer" onclick="window.location.href = '/'">
-            <nav>
+            <nav class="mt-2 md:mt-0">
                 <% if (user != null) { %>
                     <a href="/dashboard" class="mr-4">Welcome, <%= user.username %>!</a>
                     <a href="/auth/logout" class="text-lightBlue hover:underline">Logout</a>
