--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,14 @@
 <!-- views/register.ejs -->
 <%- include('header', { title: 'Register - Shrynk', user: null }) %>
 <div class="flex items-center justify-center h-screen">
-    <div class="bg-gray-800 p-8 rounded shadow-md w-96">
+    <div class="bg-gray-800 p-8 rounded shadow-md w-11/12 md:w-96">
         <h1 class="text-2xl font-bold mb-4"><i class="material-icons">person_add</i> Register</h1>
         <form action="/auth/register" method="POST">
             <input type="text" name="username" placeholder="Username" class="border p-2 mb-4 w-full bg-gray-700 text-white" required>
             <input type="password" name="password" placeholder="Password" class="border p-2 mb-4 w-full bg-gray-700 text-white" required>
-            <button type="submit" class="bg-purple-600 text-white p-2 rounded w-full"><i class="material-icons text-white">person_add</i> Register</button>
+            <button type="submit" class="bg-purple-600 text-white p-2 rounded w-full flex items-center justify-center">
+                <i class="material-icons text-white mr-2">person_add</i> Register
+            </button>
         </form>
         <p class="mt-4">Already have an account? <a href="/auth/login" class="text-purple-600 hover:underline">Login</a></p>
     </div>
