Refactor meta tags for SEO and social media sharing

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,6 +12,27 @@
     <link rel="prefetch" href="/auth/login" as="document">
     <link rel="icon" type="image/png" href="/shrynk_logo.png">
     <title><%= title %></title>
+    <!-- Meta for SEO -->
+    <meta name="description" content="Shrynk - Small Links, Big Impact. Short your Links with ease.">
+    <meta name="keywords" content="Shrynk, URL Shortener, Short Links, Shorten Links, Shorten URL, Short URL">
+    <meta name="author" content="Shrynk">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Shrynk - Small Links, Big Impact.">
+    <meta property="og:description" content="Shrynk - Short your Links with ease.">
+    <meta property="og:image" content="/shrynk_logo.png">
+    <meta property="og:url" content="https://shrynk.taymaerz.de">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Shrynk">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@shrynk">
+    <meta name="twitter:creator" content="@shrynk">
+    <meta name="twitter:title" content="Shrynk - Small Links, Big Impact.">
+    <meta name="twitter:description" content="Shrynk - Small Links, Big Impact. Short your Links with ease.">
+    <meta name="twitter:image" content="/shrynk_logo.png">
+    <meta name="twitter:image:alt" content="Shrynk Logo">
+    <meta name="twitter:domain" content="shrynk.taymaerz.de">
+
+
 </head>
 <body class="bg-gray-900 text-white">
     <header class="p-4">
