Refactor meta tags for SEO and social media sharing

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Shrynk - Small Links, Big Impact.">
     <meta property="og:description" content="Shrynk - Short your Links with ease.">
-    <meta property="og:image" content="/shrynk_logo.png">
+    <meta property="og:image" content="/shrynk_logo_text.png">
     <meta property="og:url" content="https://shrynk.taymaerz.de">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shrynk">
@@ -28,10 +28,10 @@
     <meta name="twitter:creator" content="@shrynk">
     <meta name="twitter:title" content="Shrynk - Small Links, Big Impact.">
     <meta name="twitter:description" content="Shrynk - Small Links, Big Impact. Short your Links with ease.">
-    <meta name="twitter:image" content="/shrynk_logo.png">
+    <meta name="twitter:image" content="/shrynk_logo_text.png">
     <meta name="twitter:image:alt" content="Shrynk Logo">
     <meta name="twitter:domain" content="shrynk.taymaerz.de">
-
+    <meta name="theme-color" content="#6B46C1">
 
 </head>
 <body class="bg-gray-900 text-white">
