Refactor footer view to include link to source code

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 <!-- views/footer.ejs -->
 <footer class="p-4 text-center">
-    <p class="text-gray-400">© 2023 Shrynk. Made by Tay. <a href="https://taymaerz.de" class="text-lightBlue hover:underline">Visit my website</a></p>
+    <p class="text-gray-400">© 2023 Shrynk. Made by Tay. <a href="https://taymaerz.de" class="text-lightBlue hover:underline">Visit my website</a> | Check out the <a href="https://github.com/taynotfound/Shrynk" class="text-lightBlue hover:underline">Source Code.</a></p>
     <br><br><br><br><br><br><br><br><br><br><br><br>
     <img src="https://preview.redd.it/eyfzxq7ni8b71.png?auto=webp&s=1280e70c89e1c879adbc0e30d37e10e6e44f52fb" alt="Shrynk Logo" class="w-32 h-auto cursor-pointer hover:rotate-90 transition duration-1000 mx-auto" onclick="window.location.href = '/'" onmouseover="playYippieOnHover()">
 </footer>
